--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,7 +34,7 @@
 	  <div class="col-md-6 amb-hero-form">
 
     <h1 class="cover-heading">Share the <strike>road</strike> love</h1>
-    <p class="lead form-description">To be alerted when <mark class="text-nowrap">About My Bike</mark> is ready...</p>
+    <p class="lead">To be alerted when <mark class="text-nowrap">About My Bike</mark> is ready...</p>
 
     <form id="email-alert-signup">
       <input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
