Revert "add nowrap around app name. change names of dbs. make signup controller and model. make signup form work. make fully responsive switch at 1025."
This reverts commit 1a89830a744f5b0b72a0d786fd6bf25b4252ec4d.

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -14,12 +14,7 @@
   padding: 20px;
   border-radius: 2px;
 }
-
 #bike-photo-upload {
-  visibility: hidden;
-}
-
-.early-access-request-group {
   visibility: hidden;
 }
 
@@ -66,15 +61,8 @@ dl.how-to dt:before {
 dl.how-to dt.step-1:before {
   left: 8px;
 }
-
-.submit-success {
-  color: #ff3366;
-  display: inline;
-  font-size: 18px;
-  text-shadow: 0 1px 3px rgba(255,255,255,1.0);
-}
-
-@media (max-width: 1025px) {
+/*
+@media (min-width: 768px) {
   .amb-hero-form h1 {
     font-size: 30px;
   }
@@ -86,7 +74,7 @@ dl.how-to dt.step-1:before {
     margin-left: 10px;
   }
   dl.how-to dt {
-    margin-left: 0;
+    margin-left: 24px;
     padding-left: 36px;
     line-height: 170%;
   }
@@ -98,4 +86,5 @@ dl.how-to dt.step-1:before {
     left: 0;
   }
 }
+*/
 
