two big things: have fixture json bikes be shown with react. also introduce express.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,13 @@
 
 @import 'src/material-design-lite';
 
+
+/* remove !important below when you figure out a better way */
+.amb--bike-list-item-header {
+  width: 35% !important;
+}
+
+.amb--bike-list-item-card {
+  width: 65% !important;
+}
+
