add error template. start developing API using pg-promise in a subfolder. requests to bikes/all works, but bike/add not so much

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,1 +1,19 @@
-boo
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>About My Bike</title>
+    <link rel="stylesheet" media="all" href="landing.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+ <body class="default-primary-color text-primary-color">
+
+<h2>Bikes</h2>
+<ol>
+{{#bikes}}
+  <li>{{> bike}}</li>
+{{/bikes}}
+</ol>
+
+</body>
+</html>
