--- a/views/error.mustache
+++ b/views/error.mustache
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>About My Bike</title>
+    <title>About My Bike: Error</title>
     <link rel="stylesheet" media="all" href="landing.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
  <body class="default-primary-color text-primary-color">
-WAT?
+
+<p>{{message}}</p>
 
 </body>
 </html>
