--- a/views/error.mustache
+++ b/views/error.mustache
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>About My Bike: Error</title>
-    <link rel="stylesheet" media="all" href="landing.css" />
+    <link rel="stylesheet" media="all" href="/dist/css/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
  <body class="default-primary-color text-primary-color">
