--- a/views/index.mustache
+++ b/views/index.mustache
@@ -10,9 +10,19 @@
 
     <div id="target"></div>
 
-    <script src="vendor.bundle.js"></script>
-    <script src="dist/mdl.bundle.js"></script>
-    <script src="main.bundle.js"></script>
+    <script src="/dist/vendor.bundle.js"></script>
+    <script src="/dist/main.bundle.js"></script>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+    <script src="/dist/vendor-loose/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="/dist/vendor-loose/ie10-viewport-bug-workaround.js"></script>
 
   </body>
 </html>
