add bike form, partially developed and styled. Includes upload.png

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -6,3 +6,20 @@ body {
   margin-right: 20px;
   padding-top: 6rem;
 }
+
+input[type="file"].form-control-file {
+  display: none;
+}
+
+.custom-file-upload {
+  cursor: pointer;
+}
+
+.add-bike-photo {
+  opacity: 0.4;
+}
+
+.add-bike-form {
+  margin: 40px auto;
+  max-width: 360px;
+}
