--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,10 +1,37 @@
 @import '../../node_modules/bootstrap/less/bootstrap.less';
 
+/* updating some Bootstrap styles to v4 manually here 
+   PS this is shit.
+*/
 
 body {
-  margin-left: 20px;
-  margin-right: 20px;
   padding-top: 6rem;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  color: rgb(55, 58, 60);
+}
+
+.form-check-label {
+  padding-left: 1.25rem;
+  cursor: pointer;
+}
+
+input[type="radio"] {
+  margin: 0 1em;
+  font-size: 1.4rem;
+}
+
+.form-control-number {
+  width: 70px;
+}
+
+label {
+  font-weight: normal;
+}
+
+legend {
+  font-size: 1.6rem;
 }
 
 input[type="file"].form-control-file {
@@ -16,7 +43,7 @@ input[type="file"].form-control-file {
 }
 
 .add-bike-photo {
-  opacity: 0.4;
+  opacity: 0.25;
 }
 
 .add-bike-form {
