--- a/src/less/main.less
+++ b/src/less/main.less
@@ -12,6 +12,16 @@ body {
   color: rgb(55, 58, 60);
 }
 
+.page-content {
+  max-width: 600px;
+  margin: 40px auto;
+}
+
+.add-bike-form {
+  max-width: 360px;
+  margin: 0 auto;
+}
+
 .form-check-label {
   padding-left: 1.25rem;
   cursor: pointer;
@@ -46,7 +56,7 @@ input[type="file"].form-control-file {
   opacity: 0.25;
 }
 
-.add-bike-form {
-  margin: 40px auto;
-  max-width: 360px;
+dl.bike-details dt {
+  float: left;
+  padding-right: 1rem;
 }
