upgrade to bootstrap 4 -- replace LESS with SASS in Readme. add nickname field to detail page. move custom styles to SASS folder. add bootstrap, jquery and tether JS links to CDNs directly in index.html. This means we load bootstrap and jquery twice and that's a bad idea, but we are moving forward for now. also style grid page with bootstrap 4 cards and some custom cropping with overflow:hidden and media queries -- it's not perfect yet but that's what I'm fixing next.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,3 +6,79 @@
 .foo {
   @include absolute(0, 0, auto, auto);
 }
+
+body {
+  padding-top: 5rem;
+}
+
+.generic-container {
+  padding: 3rem 1.5rem;
+  margin: 0 auto;
+}
+
+.add-bike-form {
+  max-width: 410px;
+}
+
+.form-check-label {
+  padding-left: 1.25rem;
+  cursor: pointer;
+}
+
+input[type="radio"] {
+  margin: 0 1em;
+  font-size: 1.4rem;
+}
+
+.form-control-number {
+  width: 70px;
+}
+
+label {
+  font-weight: normal;
+}
+
+legend {
+  font-size: 1.6rem;
+}
+
+input[type="file"].form-control-file {
+  display: none;
+}
+
+.custom-file-upload {
+  cursor: pointer;
+}
+
+.add-bike-photo {
+  opacity: 0.25;
+}
+
+dl.bike-details dt {
+  float: left;
+  padding-right: 1rem;
+}
+
+.card-title {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.card-photo-wrapper {
+  width: 100%;
+  background-color: gray;
+  overflow: hidden;
+  height: 250px;
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .card-photo-wrapper {
+    height: 145px;
+  }
+}
+
+.card-photo {
+    width: 100%;
+}
