--- a/views/index.mustache
+++ b/views/index.mustache
@@ -16,7 +16,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 
 
-  boo
+    <script src="/dist/vendor.bundle.js"></script>
+    <script src="/dist/main.bundle.js"></script>
 
   </body>
 </html>
