add json loader to webpack for static data. further develop README and start polishing up styles which for some reason are messed up.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,3 +8,10 @@ body {
     text-align: left;
     background-color: #ff0;
 }
+
+.card-body {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1.25rem;
+}
